[Y26W2-310] feat(api): OpenAPI 갱신, 스키마 수정 (#129)
commit-id:68d8d7bc
